overflow fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -218,6 +218,9 @@ body {
 
     .locations-list {
         margin: 35px 18px 0 18px;
+        height: 100%;
+        max-height: 250px;
+        overflow: auto;
 
         li{
             display: flex;
